elinks (0.12~pre1-1) experimental; urgency=low

  * New upstream release 0.12pre1
  * Rename patches to be inline with those in unstable

 -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Sun, 21 Sep 2008 18:37:43 +0530

elinks (0.12~20080527-2) experimental; urgency=low

  * Re-enable --enable-debug (it is recommended for development versions of
    ELinks and adds extra checks etc.)
  * Patch 14_debug_disable_Werror.diff to remove -Werror explicitly because we
    now use --enable-debug.
  * Enable GSSAPI (Closes: #483403)
  * Disable LMZA via --without-lzma (lzma-dev in Debian from 7-zip.org doesn't
    work with ELinks).

 -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Thu, 29 May 2008 14:24:42 +0530

elinks (0.12~20080527-1) experimental; urgency=low

  * Update orig to new upstream snapshot as of 20080527 (Closes: #478156)
  * Delete patches not necessary for 12~20080527
    + 09_464384_alignof_off_t_FBTFS.diff
    + 10_bt_msg_id_FTBFS.diff
    + 12_338402_cfmakeraw_exotic_term.diff
  * Refresh patches for 12~20080527
    + 02_setup-bugs-FSSTND.diff
    + 06_459467_ui.leds.enable_0.diff
    + 08_436817_nostrip.diff
  * Disable --enable-debug as it uses -Werror and causes too many FTBFSs.
    Will look at the build logs manually and file bugs upstream for the
    warnings that are serious.

 -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Tue, 27 May 2008 21:03:09 +0530

elinks (0.12~20080127-3) experimental; urgency=low

  * Rename 09_464384_AMD64_FBTFS.diff as 09_464384_alignof_off_t_FBTFS.diff
  * Refresh 12_338402_cfmakeraw_exotic_term.diff for 0.12~20080127
  * Remove patch 13_fsp-display-dir.diff (not necessary for 0.12) 

 -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Sun, 27 Apr 2008 02:00:57 +0530

elinks (0.12~20080127-2) experimental; urgency=low

  * Remove patch 07_local-CGI-query-fix.diff (Closes: #464073)
  * Patch 09_464384_AMD64_FBTFS.diff to prevent FTBFS on AMD64 because of
    -Werror.  Thanks Kalle Olavi Niemitalo (Closes: #464384)